// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BTCAmount should render correctly for extra large size 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 2,
      },
      undefined,
    ]
  }
>
  <Icon
    id="bitcoinLogo"
    style={
      [
        {
          "height": 24,
          "marginRight": 2,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": 24,
        },
        false,
        false,
        false,
        false,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "baseline",
        "flexDirection": "row",
        "paddingTop": 4,
      }
    }
  >
    <MixedLetterSpacingText
      style={
        [
          {
            "fontFamily": "CourierPrime-Regular",
            "fontWeight": "bold",
            "textAlign": "center",
          },
          {
            "fontSize": 30,
            "lineHeight": 40,
            "paddingRight": 4,
          },
          false,
          false,
          false,
          false,
        ]
      }
      value={21000}
    />
    <PeachText
      style={
        [
          {
            "fontSize": 20,
            "lineHeight": 30,
            "paddingBottom": 4,
            "paddingLeft": 4,
          },
          false,
          false,
          false,
          false,
          {
            "fontFamily": "Baloo2-Regular",
            "fontWeight": "500",
            "textAlign": "left",
          },
        ]
      }
    >
      sats
    </PeachText>
  </View>
</View>
`;

exports[`BTCAmount should render correctly for extra small size 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 2,
      },
      undefined,
    ]
  }
>
  <Icon
    id="bitcoinLogo"
    style={
      [
        false,
        false,
        false,
        false,
        {
          "height": 10.5,
          "paddingBottom": 3.5,
          "paddingLeft": 3.5,
          "paddingRight": 3.5,
          "paddingTop": 3.5,
          "width": 10.5,
        },
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "baseline",
        "flexDirection": "row",
        "paddingTop": 4,
      }
    }
  >
    <MixedLetterSpacingText
      style={
        [
          {
            "fontFamily": "CourierPrime-Regular",
            "fontWeight": "bold",
            "textAlign": "center",
          },
          false,
          false,
          false,
          false,
          {
            "fontSize": 15,
            "lineHeight": 20,
            "paddingRight": 2,
          },
        ]
      }
      value={21000}
    />
    <PeachText
      style={
        [
          false,
          false,
          false,
          false,
          {
            "fontSize": 10,
            "lineHeight": 15,
            "paddingBottom": 2,
            "paddingLeft": 2,
          },
          {
            "fontFamily": "Baloo2-Regular",
            "fontWeight": "500",
            "textAlign": "left",
          },
        ]
      }
    >
      sats
    </PeachText>
  </View>
</View>
`;

exports[`BTCAmount should render correctly for large size 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 2,
      },
      undefined,
    ]
  }
>
  <Icon
    id="bitcoinLogo"
    style={
      [
        false,
        {
          "height": 19.5,
          "marginRight": 2,
          "paddingBottom": 6.5,
          "paddingLeft": 6.5,
          "paddingRight": 6.5,
          "paddingTop": 6.5,
          "width": 19.5,
        },
        false,
        false,
        false,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "baseline",
        "flexDirection": "row",
        "paddingTop": 4,
      }
    }
  >
    <MixedLetterSpacingText
      style={
        [
          {
            "fontFamily": "CourierPrime-Regular",
            "fontWeight": "bold",
            "textAlign": "center",
          },
          false,
          {
            "fontSize": 26,
            "lineHeight": 34,
            "paddingRight": 4,
          },
          false,
          false,
          false,
        ]
      }
      value={21000}
    />
    <PeachText
      style={
        [
          false,
          {
            "fontSize": 18,
            "lineHeight": 27,
            "paddingBottom": 3,
            "paddingLeft": 4,
          },
          false,
          false,
          false,
          {
            "fontFamily": "Baloo2-Regular",
            "fontWeight": "500",
            "textAlign": "left",
          },
        ]
      }
    >
      sats
    </PeachText>
  </View>
</View>
`;

exports[`BTCAmount should render correctly for medium size 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 2,
      },
      undefined,
    ]
  }
>
  <Icon
    id="bitcoinLogo"
    style={
      [
        false,
        false,
        {
          "height": 15,
          "marginRight": 2,
          "paddingBottom": 5,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 5,
          "width": 15,
        },
        false,
        false,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "baseline",
        "flexDirection": "row",
        "paddingTop": 4,
      }
    }
  >
    <MixedLetterSpacingText
      style={
        [
          {
            "fontFamily": "CourierPrime-Regular",
            "fontWeight": "bold",
            "textAlign": "center",
          },
          false,
          false,
          {
            "fontSize": 22,
            "lineHeight": 30,
            "paddingRight": 3,
          },
          false,
          false,
        ]
      }
      value={21000}
    />
    <PeachText
      style={
        [
          false,
          false,
          {
            "fontSize": 16,
            "lineHeight": 24,
            "paddingBottom": 2,
            "paddingLeft": 3,
          },
          false,
          false,
          {
            "fontFamily": "Baloo2-Regular",
            "fontWeight": "500",
            "textAlign": "left",
          },
        ]
      }
    >
      sats
    </PeachText>
  </View>
</View>
`;

exports[`BTCAmount should render correctly for small size 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 2,
      },
      undefined,
    ]
  }
>
  <Icon
    id="bitcoinLogo"
    style={
      [
        false,
        false,
        false,
        {
          "height": 12,
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
          "width": 12,
        },
        false,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "baseline",
        "flexDirection": "row",
        "paddingTop": 4,
      }
    }
  >
    <MixedLetterSpacingText
      style={
        [
          {
            "fontFamily": "CourierPrime-Regular",
            "fontWeight": "bold",
            "textAlign": "center",
          },
          false,
          false,
          false,
          {
            "fontSize": 17,
            "lineHeight": 23,
            "paddingRight": 2,
          },
          false,
        ]
      }
      value={21000}
    />
    <PeachText
      style={
        [
          false,
          false,
          false,
          {
            "fontSize": 12,
            "lineHeight": 18,
            "paddingBottom": 2,
            "paddingLeft": 2,
          },
          false,
          {
            "fontFamily": "Baloo2-Regular",
            "fontWeight": "500",
            "textAlign": "left",
          },
        ]
      }
    >
      sats
    </PeachText>
  </View>
</View>
`;

exports[`MixedLetterSpacingText should render correctly 1`] = `
<PeachText
  style={
    [
      [
        {
          "fontSize": 16,
        },
      ],
    ]
  }
>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#EAE3DF",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#EAE3DF",
        },
        {
          "letterSpacing": -3.36,
        },
      ]
    }
  >
    .
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#EAE3DF",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#EAE3DF",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "letterSpacing": -5.6,
        },
      ]
    }
  >
     
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#EAE3DF",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    2
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    1
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "letterSpacing": -5.6,
        },
      ]
    }
  >
     
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
</PeachText>
`;
